--- a/index.html
+++ b/index.html
@@ -24,35 +24,35 @@
 
     </div>
     <ul id="myUl">
-        <li>
-            <div class="toDo">
-                <div class="date">date</div>
-                <div class="task">
-                    <p>Task for create user page</p>
+        <!--<li>-->
+            <!--<div class="toDo">-->
+                <!--<div class="date">date</div>-->
+                <!--<div class="task">-->
+                    <!--<p>Task for create user page</p>-->
 
-                </div>
-                <div class="buttons">
-                    <div class="confirmButton"><a href="#"  onclick="return markDone(this)"><i class="fas fa-check"></i></a>
-                    </div>
-                    <div class="deleteButton"><a href="#"  onclick="return deleteTask(this)"><i class="fas fa-trash-alt"></i></a></div>
-                </div>
-            </div>
-        </li>
-        <li>
-            <div class="done">
-                <div class="date">date</div>
-                <div class="task">
-                    <p>Task for create user page</p>
+                <!--</div>-->
+                <!--<div class="buttons">-->
+                    <!--<div class="confirmButton"><a href="#"  onclick="return markDone(this)"><i class="fas fa-check"></i></a>-->
+                    <!--</div>-->
+                    <!--<div class="deleteButton"><a href="#"  onclick="return deleteTask(this)"><i class="fas fa-trash-alt"></i></a></div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</li>-->
+        <!--<li>-->
+            <!--<div class="done">-->
+                <!--<div class="date">date</div>-->
+                <!--<div class="task">-->
+                    <!--<p>Task for create user page</p>-->
 
-                </div>
-                <div class="buttons">
-                    <div class="confirmButton  confirmButton-done"><a href="#" onclick="return markDone(this)"><i
-                            class="fas fa-check"></i></a></div>
-                    <div class="deleteButton"><a href="#" onclick="return deleteTask(this)"><i
-                            class="fas fa-trash-alt"></i></a></div>
-                </div>
-            </div>
-        </li>
+                <!--</div>-->
+                <!--<div class="buttons">-->
+                    <!--<div class="confirmButton  confirmButton-done"><a href="#" onclick="return markDone(this)"><i-->
+                            <!--class="fas fa-check"></i></a></div>-->
+                    <!--<div class="deleteButton"><a href="#" onclick="return deleteTask(this)"><i-->
+                            <!--class="fas fa-trash-alt"></i></a></div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</li>-->
     </ul>
 </div>
 </body>
